@@ -9,12 +9,14 @@ import org.springframework.stereotype.Service;
 
 import java.io.*;
 import java.nio.charset.StandardCharsets;
-import java.nio.file.*;
+import java.nio.file.Paths;
 import java.util.*;
 
 /**
  * 基于 Spark 的 Iceberg 数据查询服务。
- * 读取已同步落盘的 Iceberg 数据（通过 spark-submit 执行 PySpark 脚本）。
+ * 通过 spark-submit 调用独立作业 {@code com.rims.spark.QueryJob}（scripts/spark/rims-spark-query.jar）
+ * 执行任意 SQL（SELECT / WHERE / JOIN / 聚合），读取已同步落盘的 Iceberg 数据。
+ * QueryJob 以 RESULT_ 前缀行输出列名/行 JSON/计数，本服务解析后做内存分页。
  */
 @Service
 public class SparkQueryService {
@@ -30,7 +32,6 @@ public class SparkQueryService {
 
     /** 列出某系统已同步的表（库 -> 表列表，按 databaseName 分组）。 */
     public List<Map<String, Object>> listSyncedTables(String systemId) {
-        // 直接查该系统全部表统计记录，内存去重分组（避免 groupBy 差异）
         List<RSyncTableStat> stats = tableStatMapper.selectList(
                 new LambdaQueryWrapper<RSyncTableStat>()
                         .eq(RSyncTableStat::getSystemId, systemId));
@@ -50,11 +51,10 @@ public class SparkQueryService {
         return result;
     }
 
-    /** 通过 Spark 执行 SQL 查询已同步的 Iceberg 数据。 */
+    /** 通过 spark-submit + QueryJob 执行任意 SQL 查询已同步的 Iceberg 数据，结果内存分页。 */
     public Map<String, Object> executeQuery(String systemId, String database, String sql, int page, int pageSize) {
         Map<String, Object> result = new LinkedHashMap<>();
         try {
-            // SQL 空则返回空
             if (sql == null || sql.isBlank()) {
                 result.put("columns", List.of());
                 result.put("rows", List.of());
@@ -64,18 +64,17 @@ public class SparkQueryService {
             if (!props.isEnabled()) {
                 return simulate(sql, page, pageSize);
             }
-            // 用 SeaTunnel Spark 引擎查询（Iceberg source -> Console sink），
-            // warehouse 指向该库目录 {warehouse}/{db}，避开 PySpark 的 Python 兼容问题。
-            String confFile = writeConf(database, sql);
-            String log = runSeaTunnelSpark(confFile);
-            List<Map<String, Object>> all = parseConsoleResult(log);
+            String log = runSparkSql(sql);
+            ParsedResult parsed = parseResult(log);
+            if (parsed.error != null) {
+                throw new IllegalStateException(parsed.error);
+            }
+            List<Map<String, Object>> all = parsed.rows;
             int total = all.size();
             int from = Math.min((page - 1) * pageSize, total);
             int to = Math.min(from + pageSize, total);
             List<Map<String, Object>> pageRows = from >= to ? List.of() : all.subList(from, to);
-            List<String> columns = new ArrayList<>();
-            if (!all.isEmpty()) columns.addAll(all.get(0).keySet());
-            result.put("columns", columns);
+            result.put("columns", parsed.columns);
             result.put("rows", pageRows);
             result.put("total", total);
         } catch (Exception e) {
@@ -84,93 +83,71 @@ public class SparkQueryService {
         return result;
     }
 
-    /** 生成 SeaTunnel conf：Iceberg source（读已同步表）+ Console sink。 */
-    private String writeConf(String database, String sql) throws IOException {
-        String dbName = database == null || database.isBlank() ? "" : database;
-        String warehouse = props.getWarehouseDir();
-        if (!dbName.isEmpty()) {
-            warehouse = warehouse + "/" + dbName;
-        }
-        // 用查询语句作为 Iceberg source 的 query（表名需为 namespace.table，如 archive.l_organization）
-        String query = sql.replace("\"", "\\\"").replace("\n", " ");
-        // Java 17+ 强封装导致 Spark 反射 DirectByteBuffer 失败，需开放模块访问
-        String jvmOpts = "--add-opens=java.base/java.nio=ALL-UNNAMED --add-opens=java.base/sun.nio.ch=ALL-UNNAMED --add-exports=java.base/sun.nio.ch=ALL-UNNAMED";
-        String conf = "env {\n"
-                + "  parallelism = 1\n"
-                + "  job.mode = \"BATCH\"\n"
-                + "  spark.app.name = \"rims_query\"\n"
-                + "  spark.master = \"local[1]\"\n"
-                + "  spark.driver.extraJavaOptions = \"" + jvmOpts + "\"\n"
-                + "  spark.executor.extraJavaOptions = \"" + jvmOpts + "\"\n"
-                + "}\n"
-                + "source {\n"
-                + "  Iceberg {\n"
-                + "    catalog_name = \"seatunnel\"\n"
-                + "    iceberg.catalog.config = {\n"
-                + "      type = \"hadoop\"\n"
-                + "      warehouse = \"file://" + warehouse + "\"\n"
-                + "    }\n"
-                + "    query = \"" + query + "\"\n"
-                + "    plugin_output = \"iceberg\"\n"
-                + "  }\n"
-                + "}\n"
-                + "transform {\n}\n"
-                + "sink {\n"
-                + "  Console {\n"
-                + "    plugin_input = \"iceberg\"\n"
-                + "  }\n"
-                + "}\n";
-        Files.createDirectories(Paths.get(System.getProperty("java.io.tmpdir"), "rims_spark"));
-        Path p = Paths.get(System.getProperty("java.io.tmpdir"), "rims_spark", "query_" + System.currentTimeMillis() + ".conf");
-        Files.writeString(p, conf, StandardCharsets.UTF_8);
-        return p.toString();
-    }
-
-    /** 用 SeaTunnel Spark 引擎执行查询 conf，返回 Console 输出日志。 */
-    private String runSeaTunnelSpark(String confFile) throws Exception {
-        String script = props.getSeatunnelHome() + "/bin/start-seatunnel-spark-3-connector-v2.sh";
+    /**
+     * 调用 spark-submit 运行 QueryJob，返回合并 stdout（含 RESULT_ 前缀行 + Spark 日志）。
+     * 子进程 JDK 隔离为 ≤11（Spark 3.3 限制），后端自身仍跑 17+。
+     */
+    private String runSparkSql(String sql) throws Exception {
+        String sparkSubmit = Paths.get(props.getHome(), "bin", "spark-submit").toString();
         ProcessBuilder pb = new ProcessBuilder(
-                script,
+                sparkSubmit,
                 "--master", "local[1]",
-                "--deploy-mode", "client",
-                "--config", confFile);
-        // 保证 SeaTunnel 能找到 SPARK_HOME，并开放 JDK 内部模块访问（Java 17+ 需要）
+                "--driver-memory", "1g",
+                "--jars", props.getIcebergJar(),
+                "--class", "com.rims.spark.QueryJob",
+                props.getQueryJobJar(),
+                props.getWarehouseDir(),
+                props.getCatalogName(),
+                sql);
         pb.environment().put("SPARK_HOME", props.getHome());
-        pb.environment().put("JDK_JAVA_OPTIONS", "--add-opens=java.base/java.nio=ALL-UNNAMED --add-opens=java.base/sun.nio.ch=ALL-UNNAMED --add-exports=java.base/sun.nio.ch=ALL-UNNAMED");
-        pb.directory(java.nio.file.Paths.get(props.getSeatunnelHome()).toFile());
+        // Spark 3.3 仅支持 JDK ≤11，而后端运行于 17+；隔离子进程 JDK
+        String javaHome = props.getJavaHome();
+        if (javaHome != null && !javaHome.isBlank()) pb.environment().put("JAVA_HOME", javaHome);
         pb.redirectErrorStream(true);
         Process p = pb.start();
         StringBuilder out = new StringBuilder();
         try (BufferedReader r = new BufferedReader(new InputStreamReader(p.getInputStream(), StandardCharsets.UTF_8))) {
             String line;
-            while ((line = r.readLine()) != null) {
-                out.append(line).append('\n');
-            }
+            while ((line = r.readLine()) != null) out.append(line).append('\n');
         }
         int exit = p.waitFor();
         String log = out.toString();
-        if (exit != 0) {
-            throw new IllegalStateException("SeaTunnel Spark 查询退出码 " + exit + ":\n" + tail(log, 40));
+        // 若 QueryJob 已输出 RESULT_ERROR，异常细节由 parseResult 提取；
+        // 仅在无任何 RESULT_ 输出（如 spark-submit 自身失败）时按退出码报错
+        if (exit != 0 && !log.contains("RESULT_")) {
+            throw new IllegalStateException("spark-submit 退出码 " + exit + ":\n" + tail(log, 40));
         }
         return log;
     }
 
-    /** 解析 Console sink 输出（row=N : {json} 行）为 List<Map>。 */
+    /** 解析 QueryJob 输出的 RESULT_ 前缀行为列名、行 Map、错误信息。 */
     @SuppressWarnings("unchecked")
-    private List<Map<String, Object>> parseConsoleResult(String log) {
-        List<Map<String, Object>> rows = new ArrayList<>();
+    private ParsedResult parseResult(String log) {
+        ParsedResult pr = new ParsedResult();
         for (String line : log.split("\n")) {
-            String t = line.trim();
-            int colon = t.indexOf(" : ");
-            if (colon < 0) continue;
-            String json = t.substring(colon + 3).trim();
-            if (json.startsWith("{") && json.endsWith("}")) {
+            if (line.startsWith("RESULT_ERROR:")) {
+                pr.error = line.substring("RESULT_ERROR:".length()).trim();
+            } else if (line.startsWith("RESULT_COLUMNS:")) {
+                String cols = line.substring("RESULT_COLUMNS:".length());
+                for (String c : cols.split("\t")) {
+                    String t = c.trim();
+                    if (!t.isEmpty()) pr.columns.add(t);
+                }
+            } else if (line.startsWith("RESULT_ROW:")) {
+                String json = line.substring("RESULT_ROW:".length()).trim();
                 try {
-                    rows.add(objectMapper.readValue(json, Map.class));
-                } catch (Exception ignored) {}
+                    pr.rows.add(objectMapper.readValue(json, Map.class));
+                } catch (Exception ignored) {
+                }
             }
         }
-        return rows;
+        return pr;
+    }
+
+    private static class ParsedResult {
+        List<String> columns = new ArrayList<>();
+        List<Map<String, Object>> rows = new ArrayList<>();
+        String error = null;
     }
 
     private String tail(String s, int n) {
